# d3drm_test

./: .editorconfig  CMakeLists.txt
d3drm/: CMakeLists.txt  dd.c  dd.h  main.c
dx7sdk/d3dim/: CMakeLists.txt
dx7sdk/d3dim/include/: d3dapp.h  d3denum.h  d3dfile.h  d3dframe.h  d3dtextr.h  d3dutil.h
dx7sdk/d3dim/src/bend/: CMakeLists.txt  bend.cpp  winmain.rc
dx7sdk/d3dim/src/billboard/: CMakeLists.txt  billboard.cpp
dx7sdk/d3dim/src/boids/: CMakeLists.txt  boids.cpp  winmain.rc
dx7sdk/d3dim/src/bumpearth/: CMakeLists.txt  bumpearth.cpp  winmain.rc
dx7sdk/d3dim/src/bumpwaves/: CMakeLists.txt  bumpwaves.cpp
dx7sdk/d3dim/src/clipmirror/: CMakeLists.txt  clipmirror.cpp
dx7sdk/d3dim/src/compress/: CMakeLists.txt  compress.cpp  winmain.rc
dx7sdk/d3dim/src/d3dframe/: CMakeLists.txt  d3dapp.cpp  d3denum.cpp  d3dfile.cpp  d3dframe.cpp  d3dmath.cpp  d3dtextr.cpp  d3dutil.cpp
dx7sdk/d3dim/src/dolphin/: CMakeLists.txt  dolphin.cpp
dx7sdk/d3dim/src/enumtex/: CMakeLists.txt  enumtex.cpp
dx7sdk/d3dim/src/envcube/: CMakeLists.txt  envcube.cpp  winmain.rc
dx7sdk/d3dim/src/filter/: CMakeLists.txt  filter.cpp  winmain.rc
dx7sdk/d3dim/src/fireworks/: CMakeLists.txt  fireworks.cpp
dx7sdk/d3dim/src/flare/: CMakeLists.txt  flare.cpp
dx7sdk/d3dim/src/lightmap/: CMakeLists.txt  lightmap.cpp  winmain.rc
dx7sdk/d3dim/src/lights/: CMakeLists.txt  lights.cpp
dx7sdk/d3dim/src/mfcfog/: CMakeLists.txt  d3dapp.cpp  d3dapp.rc  fog.cpp  stdafx.h
dx7sdk/d3dim/src/mfctex/: CMakeLists.txt  mfcform.cpp  mfctex.cpp  mtexture.cpp  winmain.rc
dx7sdk/d3dim/src/mipmap/: CMakeLists.txt  mipmap.cpp  winmain.rc
dx7sdk/d3dim/src/mtexture/: CMakeLists.txt  mtexture.cpp  winmain.rc
dx7sdk/d3dim/src/screensaver/: CMakeLists.txt  render.cpp  screensaver.cpp  screensaver.rc
dx7sdk/d3dim/src/shadowvol/: CMakeLists.txt  shadowvol.cpp
dx7sdk/d3dim/src/shadowvol2/: CMakeLists.txt  chull.cpp  geom.cpp  shadow.h  shadowvol2.cpp  winmain.rc
dx7sdk/d3dim/src/spheremap/: CMakeLists.txt  spheremap.cpp
dx7sdk/d3dim/src/stencildepth/: CMakeLists.txt  stencildepth.cpp  winmain.rc
dx7sdk/d3dim/src/stencilmirror/: CMakeLists.txt  mirror.cpp
dx7sdk/d3dim/src/vbuffer/: CMakeLists.txt  vbuffer.cpp
dx7sdk/d3dim/src/videotex/: CMakeLists.txt  videotex.cpp
dx7sdk/d3dim/src/wbuffer/: CMakeLists.txt  wbuffer.cpp  winmain.rc
dx7sdk/d3dim/src/xfile/: CMakeLists.txt  winmain.rc  xfile.cpp
dx7sdk/d3drm/: CMakeLists.txt
dx7sdk/d3drm/src/convxfmt/: CMakeLists.txt  convxfmt.cpp
dx7sdk/d3drm/src/faces/: CMakeLists.txt  faces.cpp
dx7sdk/d3drm/src/fly/: CMakeLists.txt  fly.cpp
dx7sdk/d3drm/src/flyfs/: CMakeLists.txt  fly.cpp  rmfull.cpp  rmfull.h
dx7sdk/d3drm/src/globe/: CMakeLists.txt  globe.cpp
dx7sdk/d3drm/src/hier1/: CMakeLists.txt  hier1.cpp
dx7sdk/d3drm/src/hier2/: CMakeLists.txt  hier2.cpp
dx7sdk/d3drm/src/loadfile/: CMakeLists.txt  loadfile.cpp  winmain.cpp
dx7sdk/d3drm/src/morph/: CMakeLists.txt  morph.cpp
dx7sdk/d3drm/src/quat/: CMakeLists.txt  quat.cpp  rmmain.cpp
dx7sdk/d3drm/src/rmbegin1/: CMakeLists.txt  rmbegin1.cpp
dx7sdk/d3drm/src/rmbegin2/: CMakeLists.txt  rmbegin2.cpp
dx7sdk/d3drm/src/rmenum/: CMakeLists.txt  rmenum.cpp  rmenum.rc  rmerror.c  rmerror.h
dx7sdk/d3drm/src/rmshadow/: CMakeLists.txt  rmmain.cpp  rmshadow.cpp
dx7sdk/d3drm/src/tex1/: CMakeLists.txt  tex1.cpp
dx7sdk/d3drm/src/tex3/: CMakeLists.txt  tex3.cpp
dx7sdk/d3drm/src/tex4/: CMakeLists.txt  tex4.cpp
dx7sdk/d3drm/src/tex5/: CMakeLists.txt  tex5.cpp
dx7sdk/d3drm/src/trans/: CMakeLists.txt  trans.cpp
dx7sdk/d3drm/src/uvis/: CMakeLists.txt  uvis.cpp
dx7sdk/d3drm/src/viewer/: CMakeLists.txt  viewer.cpp
dx7sdk/d3drm/src/xofload/: CMakeLists.txt  xofload.cpp
dx7sdk/d3drm/src/xofsave/: CMakeLists.txt  xofsave.cpp
dx7sdk/d3drm/src/xofuser/: CMakeLists.txt  mysave.cpp  mytest.cpp
dx7sdk/d3dx/: CMakeLists.txt
dx7sdk/d3dx/src/envmap/: CMakeLists.txt  envmap.cpp
dx7sdk/d3dx/src/gravity/: CMakeLists.txt  gravity.cpp
dx7sdk/d3dx/src/particle/: CMakeLists.txt  cground.hpp  particle.cpp
dx7sdk/d3dx/src/sprite/: CMakeLists.txt
dx7sdk/d3dx/src/tentacle/: CMakeLists.txt  cframetimer.hpp  clensflare.hpp  ctentacle.hpp  tentacle.cpp
dx7sdk/d3dx/src/trivfs/: CMakeLists.txt
dx7sdk/d3dx/src/trivwin/: CMakeLists.txt
dx7sdk/ddraw/: CMakeLists.txt
dx7sdk/ddraw/src/ddenum/: CMakeLists.txt  ddenum.rc
dx7sdk/ddraw/src/ddex1/: CMakeLists.txt  ddex1.rc
dx7sdk/ddraw/src/ddex2/: CMakeLists.txt  ddex2.rc
dx7sdk/ddraw/src/ddex3/: CMakeLists.txt  ddex3.rc
dx7sdk/ddraw/src/ddex4/: CMakeLists.txt  ddex4.rc
dx7sdk/ddraw/src/ddex5/: CMakeLists.txt
dx7sdk/ddraw/src/ddoverlay/: CMakeLists.txt  ddoverlay.cpp  ddoverlay.rc
dx7sdk/ddraw/src/donuts/: CMakeLists.txt  donuts.rc
dx7sdk/ddraw/src/dxtex/: CMakeLists.txt  dxtex.rc  stdafx.h
dx7sdk/ddraw/src/font/: CMakeLists.txt  font.cpp
dx7sdk/ddraw/src/fswindow/: CMakeLists.txt  fswindow.cpp  fswindow.rc  winmain.cpp
dx7sdk/ddraw/src/modetest/: CMakeLists.txt  modetest.rc
dx7sdk/ddraw/src/mosquito/: CMakeLists.txt  mosquito.cpp
dx7sdk/ddraw/src/multimon/: CMakeLists.txt  multimon.cpp
dx7sdk/ddraw/src/stretch/: CMakeLists.txt  stretch.cpp  stretch.rc
dx7sdk/ddraw/src/switcher/: CMakeLists.txt  switcher.rc
dx7sdk/ddraw/src/wormhole/: CMakeLists.txt  wormhole.rc
dx7sdk/dinput/: CMakeLists.txt
dx7sdk/dinput/src/digame/: CMakeLists.txt  digame.cpp  gameplay.cpp
dx7sdk/dinput/src/ffdonuts/: CMakeLists.txt  diutil.cpp  ffdonuts.cpp  ffdonuts.h  ffdonuts.rc
dx7sdk/dinput/src/fffileread/: CMakeLists.txt
dx7sdk/dinput/src/joyffeed/: CMakeLists.txt  joyffeed.cpp  winmain.cpp
dx7sdk/dinput/src/joystimm/: CMakeLists.txt
dx7sdk/dinput/src/keybdbuf/: CMakeLists.txt  keybdbuf.cpp  winmain.cpp
dx7sdk/dinput/src/keybdexc/: CMakeLists.txt
dx7sdk/dinput/src/keybdimm/: CMakeLists.txt  keybdimm.cpp  winmain.cpp
dx7sdk/dinput/src/mouseexc/: CMakeLists.txt  mouseexc.cpp  winmain.cpp
dx7sdk/dmusic/: CMakeLists.txt
implibs/: CMakeLists.txt  d3drm-mingw.def  d3drm.c  d3drm.def  d3dxof.c  d3dxof.def
win32/: CMakeLists.txt
(+192 files in other folders)
