include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")

add_subdirectory(src/bend)
add_subdirectory(src/billboard)
add_subdirectory(src/boids)
add_subdirectory(src/bumpearth)
add_subdirectory(src/bumpwaves)
add_subdirectory(src/clipmirror)
add_subdirectory(src/compress)
add_subdirectory(src/d3dframe)
add_subdirectory(src/dolphin)
add_subdirectory(src/enumtex)
add_subdirectory(src/envcube)
add_subdirectory(src/filter)
add_subdirectory(src/fireworks)
add_subdirectory(src/flare)
add_subdirectory(src/lightmap)
add_subdirectory(src/lights)
if(0)
    add_subdirectory(src/mfcfog)
    add_subdirectory(src/mfctex)
endif()
add_subdirectory(src/mipmap)
add_subdirectory(src/mtexture)
add_subdirectory(src/screensaver)
add_subdirectory(src/shadowvol)
add_subdirectory(src/shadowvol2)
add_subdirectory(src/spheremap)
add_subdirectory(src/stencildepth)
add_subdirectory(src/stencilmirror)
add_subdirectory(src/tutorials/drawprims)
add_subdirectory(src/tutorials/enumerate)
add_subdirectory(src/tutorials/texture)
add_subdirectory(src/tutorials/triangle)
add_subdirectory(src/tutorials/zbuffer)
add_subdirectory(src/vbuffer)
add_subdirectory(src/videotex)
add_subdirectory(src/wbuffer)
add_subdirectory(src/xfile)

file(GLOB resources "media/*.x" "media/*")
execute_process(
    COMMAND "${CMAKE_COMMAND}" -E copy_if_different ${resources} "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
)
