
add_subdirectory(src/convxfmt)
add_subdirectory(src/faces)
add_subdirectory(src/fly)
add_subdirectory(src/flyfs)
add_subdirectory(src/globe)
add_subdirectory(src/hier1)
add_subdirectory(src/hier2)
add_subdirectory(src/loadfile)
add_subdirectory(src/morph)
add_subdirectory(src/quat)
add_subdirectory(src/rmbegin1)
add_subdirectory(src/rmbegin2)
add_subdirectory(src/rmenum)
add_subdirectory(src/rmshadow)
add_subdirectory(src/tex1)
add_subdirectory(src/tex3)
add_subdirectory(src/tex4)
add_subdirectory(src/tex5)
add_subdirectory(src/trans)
add_subdirectory(src/uvis)
add_subdirectory(src/viewer)
add_subdirectory(src/xofload)
add_subdirectory(src/xofsave)
add_subdirectory(src/xofuser)

file(GLOB resources "media/*.x" "media/*")
execute_process(
        COMMAND "${CMAKE_COMMAND}" -E copy_if_different ${resources} "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
)
