include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")

add_subdirectory(src/ddenum)
add_subdirectory(src/ddex1)
add_subdirectory(src/ddex2)
add_subdirectory(src/ddex3)
add_subdirectory(src/ddex4)
add_subdirectory(src/ddex5)
add_subdirectory(src/ddoverlay)
add_subdirectory(src/donuts)
if(0)
    add_subdirectory(src/dxtex)
endif()
add_subdirectory(src/font)
add_subdirectory(src/fswindow)
add_subdirectory(src/modetest)
add_subdirectory(src/mosquito)
add_subdirectory(src/multimon)
add_subdirectory(src/stretch)
add_subdirectory(src/switcher)
add_subdirectory(src/wormhole)
